--- a/index.html
+++ b/index.html
@@ -1,129 +1,298 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <title>Gestión Comercial</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>KPIs Esenciales — Gestión Comercial</title>
+
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap" rel="stylesheet" />
+
   <style>
-    body { font-family: Arial, sans-serif; max-width: 700px; margin: 40px auto; padding: 20px; }
-    label { font-weight: bold; display: block; margin-top: 15px; }
-    select, textarea, input { width: 100%; padding: 8px; margin-top: 5px; border-radius: 6px; border: 1px solid #ccc; }
-    .area-block { background: #f0f4ff; border-radius: 8px; padding: 15px; margin-top: 15px; }
-    button { margin-top: 20px; background: #4a6cf7; color: white; padding: 12px 24px; border: none; border-radius: 8px; cursor: pointer; font-size: 16px; }
-    #operacion-display { background: #e8f5e9; padding: 10px; border-radius: 6px; margin-top: 5px; font-size: 16px; }
+    body {
+      font-family: 'Montserrat', sans-serif;
+      background-color: #f9f9f9;
+      padding: 40px 0;
+    }
+    .container {
+      max-width: 780px;
+      background: #fff;
+      margin: auto;
+      padding: 40px;
+      border-radius: 12px;
+      box-shadow: 0 4px 12px rgba(0,0,0,.08);
+    }
+    .logo {
+      display: block;
+      margin: 0 auto 20px;
+      max-width: 180px;
+    }
+    h1 {
+      color: #fa345e;
+      text-align: center;
+      margin-bottom: 10px;
+      font-size: 26px;
+    }
+    .subtitle {
+      text-align: center;
+      color: #666;
+      margin-bottom: 30px;
+      font-size: 14px;
+    }
+    label {
+      display: block;
+      margin: 16px 0 6px;
+      font-weight: 600;
+      color: #222;
+    }
+    input, select, textarea {
+      width: 100%;
+      padding: 10px;
+      border: 1px solid #ccc;
+      border-radius: 8px;
+      font-size: 14px;
+      box-sizing: border-box;
+      font-family: 'Montserrat', sans-serif;
+    }
+    select {
+      background-color: #fef2f3;
+    }
+    select[multiple] {
+      background-color: #fef2f3;
+      min-height: 160px;
+    }
+    textarea {
+      resize: vertical;
+      min-height: 80px;
+    }
+    button {
+      background-color: #fa345e;
+      color: white;
+      border: none;
+      padding: 12px 18px;
+      border-radius: 8px;
+      font-size: 16px;
+      cursor: pointer;
+      margin-top: 24px;
+      width: 100%;
+      font-family: 'Montserrat', sans-serif;
+      font-weight: 600;
+    }
+    button:disabled {
+      background-color: #ccc;
+      cursor: not-allowed;
+    }
+    .block {
+      border: 1px solid #eee;
+      border-radius: 12px;
+      padding: 18px;
+      margin-top: 18px;
+      background: #fff;
+    }
+    .block h3 {
+      color: #fa345e;
+      margin: 0 0 14px 0;
+      font-size: 16px;
+    }
+    .small-note {
+      color: #777;
+      font-size: 12px;
+      margin-top: 6px;
+    }
+    .error {
+      background: #fff3cd;
+      border: 1px solid #ffeeba;
+      color: #856404;
+      border-radius: 8px;
+      padding: 10px;
+      margin-top: 12px;
+      display: none;
+      font-size: 13px;
+    }
+    .success {
+      background: #eaf7ea;
+      border: 1px solid #cfe9cf;
+      color: #256b25;
+      border-radius: 8px;
+      padding: 10px;
+      margin-top: 12px;
+      display: none;
+      font-size: 13px;
+    }
+    hr {
+      border: none;
+      border-top: 1px solid #eee;
+      margin: 26px 0;
+    }
+    .operacion-display {
+      background: #eaf7ea;
+      border: 1px solid #cfe9cf;
+      color: #256b25;
+      border-radius: 8px;
+      padding: 10px 14px;
+      margin-top: 6px;
+      font-size: 14px;
+      font-weight: 600;
+      min-height: 38px;
+    }
+    .hint {
+      color: #999;
+      font-size: 12px;
+      margin-top: 4px;
+    }
   </style>
 </head>
+
 <body>
-  <h2>📊 Gestión Comercial — Necesidades por Área</h2>
+  <div class="container">
+    <img src="https://estudios.apprecio.com/hubfs/logos/Apprecio-logo-rojo.png" class="logo" />
+    <h1>KPIs Esenciales — Gestión Comercial</h1>
+    <div class="subtitle">Identifica las necesidades por área que impactan en tu gestión comercial.</div>
 
-  <label>1. Nombre del Colaborador:</label>
-  <select id="nombre" onchange="asignarOperacion()">
-    <option value="">-- Selecciona --</option>
-  </select>
+    <form id="kpisForm">
 
-  <label>Operación asignada:</label>
-  <div id="operacion-display">—</div>
+      <label>Nombre del Colaborador</label>
+      <select id="nombreSelect" required>
+        <option value="">Cargando colaboradores...</option>
+      </select>
 
-  <label>2. Elige las áreas que impactan en tu gestión comercial (puedes seleccionar varias):</label>
-  <select id="areas" multiple size="8">
-    <option value="Marketing">Marketing</option>
-    <option value="Finanzas">Finanzas</option>
-    <option value="Operaciones">Operaciones</option>
-    <option value="Legal">Legal</option>
-    <option value="TI / Tecnología">TI / Tecnología</option>
-    <option value="RRHH">RRHH</option>
-    <option value="Logística">Logística</option>
-    <option value="Producto">Producto</option>
-  </select>
-  <small>💡 Mantén presionado Ctrl (o Cmd en Mac) para seleccionar varias</small>
+      <label>Operación asignada</label>
+      <div class="operacion-display" id="operacionDisplay">—</div>
 
-  <div id="preguntas-areas"></div>
+      <hr />
 
-  <button onclick="enviarFormulario()">✅ Enviar</button>
-  <div id="mensaje"></div>
+      <label>Elige la o las áreas que impactan en tu gestión comercial</label>
+      <select id="areasSelect" multiple required>
+        <option value="Marketing">Marketing</option>
+        <option value="Finanzas">Finanzas</option>
+        <option value="Operaciones">Operaciones</option>
+        <option value="Legal">Legal</option>
+        <option value="TI / Tecnología">TI / Tecnología</option>
+        <option value="RRHH">RRHH</option>
+        <option value="Logística">Logística</option>
+        <option value="Producto">Producto</option>
+      </select>
+      <div class="hint">💡 Mantén presionado Ctrl (o Cmd en Mac) para seleccionar varias áreas</div>
 
-  <script>
-    const WEBHOOK_URL = "https://n8n.openip.cl/webhook-test/kpis esenciales";
+      <div id="preguntasAreas"></div>
 
-    const SHEET_URL = "https://docs.google.com/spreadsheets/d/1nLktyBlmM1-NdRLVywPlNiUJwBCaOC26ONpgPTSxv-w/gviz/tq?tqx=out:json&sheet=Colaboradores";
+      <div class="error" id="errorBox"></div>
+      <div class="success" id="successBox"></div>
 
-    let colaboradores = {};
+      <button type="submit" id="submitBtn">✅ Enviar</button>
+    </form>
+  </div>
 
-    fetch(SHEET_URL)
-      .then(r => r.text())
-      .then(text => {
-        const json = JSON.parse(text.substring(47).slice(0, -2));
-        const rows = json.table.rows;
-        const select = document.getElementById("nombre");
-        rows.forEach(row => {
-          const nombre = row.c[0]?.v;
-          const operacion = row.c[1]?.v;
-          if (nombre && nombre !== "Nombre") {
-            colaboradores[nombre] = operacion;
-            const opt = document.createElement("option");
-            opt.value = nombre;
-            opt.textContent = nombre;
-            select.appendChild(opt);
-          }
-        });
+<script>
+  const SHEET_URL = "https://docs.google.com/spreadsheets/d/1nLktyBlmM1-NdRLVywPlNiUJwBCaOC26ONpgPTSxv-w/gviz/tq?tqx=out:json&sheet=Colaboradores";
+  const WEBHOOK_URL = "https://n8n.openip.cl/webhook-test/kpis esenciales";
+
+  const errorBox = document.getElementById("errorBox");
+  const successBox = document.getElementById("successBox");
+  const submitBtn = document.getElementById("submitBtn");
+
+  let colaboradores = {};
+
+  function showError(msg) {
+    errorBox.textContent = msg;
+    errorBox.style.display = "block";
+    successBox.style.display = "none";
+  }
+
+  function showSuccess(msg) {
+    successBox.textContent = msg;
+    successBox.style.display = "block";
+    errorBox.style.display = "none";
+  }
+
+  // Cargar colaboradores desde Google Sheets
+  fetch(SHEET_URL)
+    .then(function(r) { return r.text(); })
+    .then(function(text) {
+      const json = JSON.parse(text.substring(47).slice(0, -2));
+      const rows = json.table.rows;
+      const select = document.getElementById("nombreSelect");
+      select.innerHTML = '<option value="">-- Selecciona --</option>';
+      rows.forEach(function(row) {
+        const nombre = row.c[0] ? row.c[0].v : null;
+        const operacion = row.c[1] ? row.c[1].v : null;
+        if (nombre && nombre !== "Nombre") {
+          colaboradores[nombre] = operacion;
+          const opt = document.createElement("option");
+          opt.value = nombre;
+          opt.textContent = nombre;
+          select.appendChild(opt);
+        }
       });
+    })
+    .catch(function(err) {
+      showError("Error al cargar colaboradores: " + err.message);
+      document.getElementById("nombreSelect").innerHTML = '<option value="">Error cargando datos</option>';
+    });
 
-    function asignarOperacion() {
-      const nombre = document.getElementById("nombre").value;
-      document.getElementById("operacion-display").textContent = colaboradores[nombre] || "—";
-    }
+  document.getElementById("nombreSelect").addEventListener("change", function() {
+    const nombre = this.value;
+    const display = document.getElementById("operacionDisplay");
+    display.textContent = colaboradores[nombre] || "—";
+  });
 
-    document.getElementById("areas").addEventListener("change", generarPreguntas);
+  document.getElementById("areasSelect").addEventListener("change", function() {
+    const areas = Array.from(this.selectedOptions).map(function(o) { return o.value; });
+    const contenedor = document.getElementById("preguntasAreas");
+    contenedor.innerHTML = "";
 
-    function generarPreguntas() {
-      const areas = Array.from(document.getElementById("areas").selectedOptions).map(o => o.value);
-      const contenedor = document.getElementById("preguntas-areas");
-      contenedor.innerHTML = "";
-      areas.forEach(area => {
-        contenedor.innerHTML += `
-          <div class="area-block">
-            <h3>📌 ${area}</h3>
-            <label>¿Qué necesitas de esta área?</label>
-            <textarea id="${area}_necesitas" rows="2" placeholder="Describe el entregable o acción concreta..."></textarea>
-            <label>¿Para qué etapa del ciclo comercial lo necesitas?</label>
-            <select id="${area}_etapa">
-              <option value="">-- Selecciona --</option>
-              <option>Prospección</option>
-              <option>Calificación</option>
-              <option>Propuesta</option>
-              <option>Negociación</option>
-              <option>Cierre</option>
-              <option>Postventa</option>
-            </select>
-            <label>¿Qué decisión o resultado comercial habilita?</label>
-            <textarea id="${area}_decision" rows="2"></textarea>
-            <label>Impacto esperado en tu gestión:</label>
-            <textarea id="${area}_impacto" rows="2"></textarea>
-            <label>¿Qué KPI propones para esta área?</label>
-            <input type="text" id="${area}_kpi" placeholder="Ej: Tasa de conversión, tiempo de respuesta...">
-          </div>`;
-      });
-    }
+    const etapas = ["Prospección", "Calificación", "Propuesta", "Negociación", "Cierre", "Postventa"];
 
-    async function enviarFormulario() {
-      const nombre = document.getElementById("nombre").value;
-      const operacion = document.getElementById("operacion-display").textContent;
-      const areas = Array.from(document.getElementById("areas").selectedOptions).map(o => o.value);
+    areas.forEach(function(area) {
+      const block = document.createElement("div");
+      block.className = "block";
 
-      if (!nombre || areas.length === 0) {
-        alert("Por favor selecciona un colaborador y al menos un área.");
-        return;
-      }
+      let etapasOpts = '<option value="">-- Selecciona --</option>';
+      etapas.forEach(function(e) { etapasOpts += '<option>' + e + '</option>'; });
 
-      for (const area of areas) {
-        const payload = {
-          nombre,
-          operacion,
-          area,
-          que_necesitas: document.getElementById(`${area}_necesitas`)?.value,
-          etapa: document.getElementById(`${area}_etapa`)?.value,
-          decision: document.getElementById(`${area}_decision`)?.value,
-          impacto: document.getElementById(`${area}_impacto`)?.value,
-          kpi: document.getElementById(`${area}_kpi`)?.value,
+      block.innerHTML = '<h3>📌 ' + area + '</h3>' +
+        '<label>¿Qué necesitas de esta área?</label>' +
+        '<textarea id="' + area + '_necesitas" placeholder="Describe el entregable o acción concreta..."></textarea>' +
+        '<label>¿Para qué etapa del ciclo comercial lo necesitas?</label>' +
+        '<select id="' + area + '_etapa">' + etapasOpts + '</select>' +
+        '<label>¿Qué decisión o resultado comercial habilita?</label>' +
+        '<textarea id="' + area + '_decision"></textarea>' +
+        '<label>Impacto esperado en tu gestión</label>' +
+        '<textarea id="' + area + '_impacto"></textarea>' +
+        '<label>¿Qué KPI propones para esta área?</label>' +
+        '<input type="text" id="' + area + '_kpi" placeholder="Ej: Tasa de conversión, tiempo de respuesta..." />';
+
+      contenedor.appendChild(block);
+    });
+  });
+
+  document.getElementById("kpisForm").addEventListener("submit", async function(e) {
+    e.preventDefault();
+
+    errorBox.style.display = "none";
+    successBox.style.display = "none";
+
+    const nombre = document.getElementById("nombreSelect").value;
+    const operacion = document.getElementById("operacionDisplay").textContent;
+    const areas = Array.from(document.getElementById("areasSelect").selectedOptions).map(function(o) { return o.value; });
+
+    if (!nombre) { showError("Por favor selecciona un colaborador."); return; }
+    if (areas.length === 0) { showError("Por favor selecciona al menos un área."); return; }
+
+    submitBtn.disabled = true;
+    submitBtn.textContent = "Enviando...";
+
+    try {
+      for (var i = 0; i < areas.length; i++) {
+        var area = areas[i];
+        var payload = {
+          nombre: nombre,
+          operacion: operacion,
+          area: area,
+          que_necesitas: document.getElementById(area + "_necesitas") ? document.getElementById(area + "_necesitas").value : "",
+          etapa: document.getElementById(area + "_etapa") ? document.getElementById(area + "_etapa").value : "",
+          decision: document.getElementById(area + "_decision") ? document.getElementById(area + "_decision").value : "",
+          impacto: document.getElementById(area + "_impacto") ? document.getElementById(area + "_impacto").value : "",
+          kpi: document.getElementById(area + "_kpi") ? document.getElementById(area + "_kpi").value : ""
         };
         await fetch(WEBHOOK_URL, {
           method: "POST",
@@ -131,9 +300,21 @@
           body: JSON.stringify(payload)
         });
       }
-
-      document.getElementById("mensaje").innerHTML = "<p style='color:green;font-weight:bold'>✅ ¡Formulario enviado correctamente!</p>";
+      showSuccess("✅ ¡Formulario enviado correctamente!");
+      submitBtn.textContent = "✅ Enviar";
+      setTimeout(function() {
+        document.getElementById("kpisForm").reset();
+        document.getElementById("operacionDisplay").textContent = "—";
+        document.getElementById("preguntasAreas").innerHTML = "";
+        successBox.style.display = "none";
+      }, 2500);
+    } catch(err) {
+      showError("❌ Error al enviar: " + err.message);
+      submitBtn.textContent = "✅ Enviar";
     }
-  </script>
+
+    submitBtn.disabled = false;
+  });
+</script>
 </body>
 </html>
