--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <div class="subtitle">Identifica las necesidades por área que impactan en tu gestión comercial.</div>
 
     <form id="kpisForm">
-      <label>Nombre del Colaborador</label>
+      <label>¿Quién eres?</label>
       <select id="nombreSelect" required>
         <option value="">Cargando colaboradores...</option>
       </select>
@@ -46,14 +46,13 @@
 
       <label>Elige la o las áreas que impactan en tu gestión comercial</label>
       <select id="areasSelect" multiple required>
+        <option value="People">People</option>
         <option value="Marketing">Marketing</option>
-        <option value="Finanzas">Finanzas</option>
-        <option value="Operaciones">Operaciones</option>
-        <option value="Legal">Legal</option>
-        <option value="TI / Tecnología">TI / Tecnología</option>
-        <option value="RRHH">RRHH</option>
-        <option value="Logística">Logística</option>
-        <option value="Producto">Producto</option>
+        <option value="Operations">Operations</option>
+        <option value="Finance">Finance</option>
+        <option value="Brand">Brand</option>
+        <option value="Product">Product</option>
+        <option value="IT">IT</option>
       </select>
       <div class="hint">💡 Mantén presionado Ctrl (o Cmd en Mac) para seleccionar varias áreas</div>
 
