--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <div class="subtitle">Identifica las necesidades por área que impactan en tu gestión comercial.</div>
 
     <form id="kpisForm">
-      <label>¿Quién eres?</label>
+      <label>Nombre del Colaborador</label>
       <select id="nombreSelect" required>
         <option value="">Cargando colaboradores...</option>
       </select>
@@ -46,13 +46,14 @@
 
       <label>Elige la o las áreas que impactan en tu gestión comercial</label>
       <select id="areasSelect" multiple required>
-        <option value="People">People</option>
         <option value="Marketing">Marketing</option>
-        <option value="Operations">Operations</option>
-        <option value="Finance">Finance</option>
-        <option value="Brand">Brand</option>
-        <option value="Product">Product</option>
-        <option value="IT">IT</option>
+        <option value="Finanzas">Finanzas</option>
+        <option value="Operaciones">Operaciones</option>
+        <option value="Legal">Legal</option>
+        <option value="TI / Tecnología">TI / Tecnología</option>
+        <option value="RRHH">RRHH</option>
+        <option value="Logística">Logística</option>
+        <option value="Producto">Producto</option>
       </select>
       <div class="hint">💡 Mantén presionado Ctrl (o Cmd en Mac) para seleccionar varias áreas</div>
 
@@ -67,7 +68,7 @@
 
 <script>
   var SHEET_URL = "https://docs.google.com/spreadsheets/d/1nLktyBlmM1-NdRLVywPlNiUJwBCaOC26ONpgPTSxv-w/gviz/tq?tqx=out:json&sheet=Colaboradores";
-  var WEBHOOK_URL = "https://n8n.openip.cl/webhook/kpis esenciales";
+  var WEBHOOK_URL = "https://n8n.openip.cl/webhook-test/kpis esenciales";
 
   var errorBox = document.getElementById("errorBox");
   var successBox = document.getElementById("successBox");
@@ -104,7 +105,7 @@
       var area = areas[j];
       var areaId = area.replace(/[^a-zA-Z0-9]/g, "_");
 
-      var etapasOpts = '<option value="">-- Selecciona --</option>';
+      var etapasOpts = '';
       for (var k = 0; k < etapas.length; k++) {
         etapasOpts += '<option value="' + etapas[k] + '">' + etapas[k] + '</option>';
       }
@@ -116,7 +117,8 @@
         '<label>¿Qué necesitas de esta área? <span style="font-weight:400;color:#666">(describe concretamente el entregable/acción)</span></label>' +
         '<textarea id="' + areaId + '_necesitas" placeholder="Describe el entregable o acción concreta..."></textarea>' +
         '<label>¿En qué etapa del ciclo comercial impacta?</label>' +
-        '<select id="' + areaId + '_etapa">' + etapasOpts + '</select>' +
+        '<select id="' + areaId + '_etapa" multiple style="min-height:130px">' + etapasOpts + '</select>' +
+        '<div class="hint">💡 Mantén presionado Ctrl (o Cmd en Mac) para seleccionar varias etapas</div>' +
         '<label>Impacto esperado en tu gestión</label>' +
         '<textarea id="' + areaId + '_impacto" placeholder="¿Qué mejora o resultado esperas?"></textarea>' +
         '<label>¿Qué KPI propones para esta área?</label>' +
@@ -183,7 +185,15 @@
         operacion: operacion,
         area: area,
         que_necesitas: document.getElementById(areaId + "_necesitas") ? document.getElementById(areaId + "_necesitas").value : "",
-        etapa: document.getElementById(areaId + "_etapa") ? document.getElementById(areaId + "_etapa").value : "",
+        etapa: (function() {
+          var sel = document.getElementById(areaId + "_etapa");
+          if (!sel) return "";
+          var vals = [];
+          for (var e = 0; e < sel.options.length; e++) {
+            if (sel.options[e].selected) vals.push(sel.options[e].value);
+          }
+          return vals.join(", ");
+        })(),
         impacto: document.getElementById(areaId + "_impacto") ? document.getElementById(areaId + "_impacto").value : "",
         kpi: document.getElementById(areaId + "_kpi") ? document.getElementById(areaId + "_kpi").value : ""
       };
