--- a/index.html
+++ b/index.html
@@ -20,6 +20,12 @@
     button:disabled { background-color: #ccc; cursor: not-allowed; }
     .block { border: 1px solid #eee; border-radius: 12px; padding: 18px; margin-top: 18px; background: #fff; }
     .block h3 { color: #fa345e; margin: 0 0 14px 0; font-size: 16px; }
+    .necesidad-block { border: 1px dashed #f5a0b0; border-radius: 10px; padding: 14px; margin-top: 14px; background: #fff8f9; }
+    .necesidad-titulo { font-size: 13px; font-weight: 600; color: #fa345e; margin-bottom: 10px; }
+    .btn-agregar { background: #fff; color: #fa345e; border: 2px solid #fa345e; padding: 8px 16px; border-radius: 8px; font-size: 13px; cursor: pointer; margin-top: 14px; width: auto; font-weight: 600; }
+    .btn-agregar:hover { background: #fef2f3; }
+    .btn-eliminar { background: none; border: none; color: #ccc; font-size: 18px; cursor: pointer; float: right; margin: 0; padding: 0; width: auto; line-height: 1; }
+    .btn-eliminar:hover { color: #fa345e; }
     .error { background: #fff3cd; border: 1px solid #ffeeba; color: #856404; border-radius: 8px; padding: 10px; margin-top: 12px; display: none; font-size: 13px; }
     .success { background: #eaf7ea; border: 1px solid #cfe9cf; color: #256b25; border-radius: 8px; padding: 10px; margin-top: 12px; display: none; font-size: 13px; }
     hr { border: none; border-top: 1px solid #eee; margin: 26px 0; }
@@ -87,6 +93,46 @@
     errorBox.style.display = "none";
   }
 
+  var etapas = ["Prospección", "Calificación", "Propuesta", "Negociación", "Cierre", "Postventa"];
+
+  function getEtapasOpts() {
+    var opts = '';
+    for (var k = 0; k < etapas.length; k++) {
+      opts += '<option value="' + etapas[k] + '">' + etapas[k] + '</option>';
+    }
+    return opts;
+  }
+
+  function crearNecesidadBlock(areaId, necesidadIdx) {
+    var div = document.createElement("div");
+    div.className = "necesidad-block";
+    div.setAttribute("data-necesidad", necesidadIdx);
+    var eliminarBtn = necesidadIdx > 1 ? '<button type="button" class="btn-eliminar" onclick="eliminarNecesidad(this)" title="Eliminar">✕</button>' : '';
+    div.innerHTML =
+      '<div class="necesidad-titulo">' + eliminarBtn + '— Necesidad ' + necesidadIdx + ' —</div>' +
+      '<label>¿Qué necesitas de esta área? <span style="font-weight:400;color:#666">(describe concretamente el entregable/acción)</span></label>' +
+      '<textarea id="' + areaId + '_necesitas_' + necesidadIdx + '" placeholder="Describe el entregable o acción concreta..."></textarea>' +
+      '<label>¿En qué etapa del ciclo comercial impacta?</label>' +
+      '<select id="' + areaId + '_etapa_' + necesidadIdx + '" multiple style="min-height:130px">' + getEtapasOpts() + '</select>' +
+      '<div class="hint">💡 Mantén presionado Ctrl (o Cmd en Mac) para seleccionar varias etapas</div>' +
+      '<label>Impacto esperado en tu gestión</label>' +
+      '<textarea id="' + areaId + '_impacto_' + necesidadIdx + '" placeholder="¿Qué mejora o resultado esperas?"></textarea>' +
+      '<label>¿Qué KPI propones para esta área?</label>' +
+      '<input type="text" id="' + areaId + '_kpi_' + necesidadIdx + '" placeholder="Ej: Tasa de conversión, tiempo de respuesta..." />';
+    return div;
+  }
+
+  function eliminarNecesidad(btn) {
+    var block = btn.closest(".necesidad-block");
+    block.parentNode.removeChild(block);
+  }
+
+  function agregarNecesidad(areaId, contenedorNecesidades) {
+    var existentes = contenedorNecesidades.querySelectorAll(".necesidad-block");
+    var nuevoIdx = existentes.length + 1;
+    contenedorNecesidades.appendChild(crearNecesidadBlock(areaId, nuevoIdx));
+  }
+
   function renderPreguntas() {
     var areasSelect = document.getElementById("areasSelect");
     var areas = [];
@@ -99,30 +145,32 @@
     var contenedor = document.getElementById("preguntasAreas");
     contenedor.innerHTML = "";
 
-    var etapas = ["Prospección", "Calificación", "Propuesta", "Negociación", "Cierre", "Postventa"];
-
     for (var j = 0; j < areas.length; j++) {
       var area = areas[j];
       var areaId = area.replace(/[^a-zA-Z0-9]/g, "_");
 
-      var etapasOpts = '';
-      for (var k = 0; k < etapas.length; k++) {
-        etapasOpts += '<option value="' + etapas[k] + '">' + etapas[k] + '</option>';
-      }
-
       var block = document.createElement("div");
       block.className = "block";
-      block.innerHTML =
-        '<h3>📌 ' + area + '</h3>' +
-        '<label>¿Qué necesitas de esta área? <span style="font-weight:400;color:#666">(describe concretamente el entregable/acción)</span></label>' +
-        '<textarea id="' + areaId + '_necesitas" placeholder="Describe el entregable o acción concreta..."></textarea>' +
-        '<label>¿En qué etapa del ciclo comercial impacta?</label>' +
-        '<select id="' + areaId + '_etapa" multiple style="min-height:130px">' + etapasOpts + '</select>' +
-        '<div class="hint">💡 Mantén presionado Ctrl (o Cmd en Mac) para seleccionar varias etapas</div>' +
-        '<label>Impacto esperado en tu gestión</label>' +
-        '<textarea id="' + areaId + '_impacto" placeholder="¿Qué mejora o resultado esperas?"></textarea>' +
-        '<label>¿Qué KPI propones para esta área?</label>' +
-        '<input type="text" id="' + areaId + '_kpi" placeholder="Ej: Tasa de conversión, tiempo de respuesta..." />';
+      block.setAttribute("data-area", area);
+      block.setAttribute("data-areaid", areaId);
+
+      var header = document.createElement("h3");
+      header.textContent = "📌 " + area;
+      block.appendChild(header);
+
+      var contenedorNecesidades = document.createElement("div");
+      contenedorNecesidades.className = "necesidades-container";
+      contenedorNecesidades.appendChild(crearNecesidadBlock(areaId, 1));
+      block.appendChild(contenedorNecesidades);
+
+      var btnAgregar = document.createElement("button");
+      btnAgregar.type = "button";
+      btnAgregar.className = "btn-agregar";
+      btnAgregar.textContent = "+ Agregar otra necesidad para " + area;
+      (function(aid, cnec) {
+        btnAgregar.addEventListener("click", function() { agregarNecesidad(aid, cnec); });
+      })(areaId, contenedorNecesidades);
+      block.appendChild(btnAgregar);
 
       contenedor.appendChild(block);
     }
@@ -178,31 +226,36 @@
     submitBtn.disabled = true;
     submitBtn.textContent = "Enviando...";
 
-    var promises = areas.map(function(area) {
+    var promises = [];
+    for (var i = 0; i < areas.length; i++) {
+      var area = areas[i];
       var areaId = area.replace(/[^a-zA-Z0-9]/g, "_");
-      var payload = {
-        nombre: nombre,
-        operacion: operacion,
-        area: area,
-        que_necesitas: document.getElementById(areaId + "_necesitas") ? document.getElementById(areaId + "_necesitas").value : "",
-        etapa: (function() {
-          var sel = document.getElementById(areaId + "_etapa");
-          if (!sel) return "";
-          var vals = [];
-          for (var e = 0; e < sel.options.length; e++) {
-            if (sel.options[e].selected) vals.push(sel.options[e].value);
+      var necesidadesBlocks = document.querySelectorAll('[data-areaid="' + areaId + '"] .necesidad-block');
+      for (var n = 0; n < necesidadesBlocks.length; n++) {
+        var idx = n + 1;
+        var etapaSel = document.getElementById(areaId + "_etapa_" + idx);
+        var etapaVals = [];
+        if (etapaSel) {
+          for (var e = 0; e < etapaSel.options.length; e++) {
+            if (etapaSel.options[e].selected) etapaVals.push(etapaSel.options[e].value);
           }
-          return vals.join(", ");
-        })(),
-        impacto: document.getElementById(areaId + "_impacto") ? document.getElementById(areaId + "_impacto").value : "",
-        kpi: document.getElementById(areaId + "_kpi") ? document.getElementById(areaId + "_kpi").value : ""
-      };
-      return fetch(WEBHOOK_URL, {
-        method: "POST",
-        headers: { "Content-Type": "application/json" },
-        body: JSON.stringify(payload)
-      });
-    });
+        }
+        var payload = {
+          nombre: nombre,
+          operacion: operacion,
+          area: area,
+          que_necesitas: document.getElementById(areaId + "_necesitas_" + idx) ? document.getElementById(areaId + "_necesitas_" + idx).value : "",
+          etapa: etapaVals.join(", "),
+          impacto: document.getElementById(areaId + "_impacto_" + idx) ? document.getElementById(areaId + "_impacto_" + idx).value : "",
+          kpi: document.getElementById(areaId + "_kpi_" + idx) ? document.getElementById(areaId + "_kpi_" + idx).value : ""
+        };
+        promises.push(fetch(WEBHOOK_URL, {
+          method: "POST",
+          headers: { "Content-Type": "application/json" },
+          body: JSON.stringify(payload)
+        }));
+      }
+    }
 
     Promise.all(promises)
       .then(function() {
