--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
 <script>
   var SHEET_URL = "https://docs.google.com/spreadsheets/d/1nLktyBlmM1-NdRLVywPlNiUJwBCaOC26ONpgPTSxv-w/gviz/tq?tqx=out:json&sheet=Colaboradores";
-  var WEBHOOK_URL = "https://n8n.openip.cl/webhook-test/kpis esenciales";
+  var WEBHOOK_URL = "https://n8n.openip.cl/webhook/kpis esenciales";
 
   var errorBox = document.getElementById("errorBox");
   var successBox = document.getElementById("successBox");
